[fix,feat] fix version, feat scale mod